# xtionpro_sample_applications

./: .gitignore
xtionpro_sensor_interface/: CMakeLists.txt
xtionpro_sensor_save_images/: CMakeLists.txt
xtionpro_sensor_save_images/src/: main_script.cpp
xtionpro_sensor_save_images_ros/: CMakeLists.txt  manifest.xml  package.xml
xtionpro_sensor_save_images_ros/dataset/: depth.txt  rgb.txt
xtionpro_sensor_save_images_ros/launch/: xtionpro_sensor_save_images.launch
xtionpro_sensor_save_images_ros/src/: main_script.cpp
